<resources>
    <string name="app_name">IQ Mojo</string>
    <string name="join_us_with_facebook">Join us with facebook</string>
    <string name="or">OR</string>
    <string name="log_in_with_google">Log in with Google</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="description"><u>Description :</u></string>
    <string name="tnc"><u>Terms &amp; Conditions :</u></string>
    <string name="press_again_toExit">Press back again to exit.</string>
    <string name="error_network_not_available">Communication Failure with server. \nPlease Check GPRS Settings in Handset.</string>

    <string-array name="pager_">
        <item>Home</item>
        <item>Winner</item>
        <item>Contest</item>
        <item>FAQs</item>
    </string-array>

    <string-array name="pager_0">
        <item>My Points</item>
        <item>My Transactions</item>
    </string-array>

    <string-array name="menu_">
        <item>My Points</item>
        <item>My Profile</item>
        <item>Transactions</item>
        <item>Referral</item>
        <item>Terms of Usage and Privacy Policy</item>
        <item>Contact Us</item>
    </string-array>

    /*fb app id*/
    <string name="facebook_app_id">111749099509872</string>
    <string name="google_signin_server_client_id">681782354637-j74nv0l08vsvb3408ou7uuu1rpunvh4b.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avail_bal">Available Balance</string>
    <string name="bankAccount">Bank Account</string>
    <string name="transferPaytm">Transfer to Paytm</string>
    <string name="transferBank">Transfer to Bank Account</string>
    <string name="enterMobile">Enter your mobile number</string>
    <string name="amount">Amount</string>
    <string name="accountname">Account Holder Name</string>
    <string name="accountnum">Account Number</string>
    <string name="confaccountnum">Confirm Account Number</string>
    <string name="ifsc">IFSC Code</string>
    <string name="date">DATE</string>
    <string name="activity">ACTIVITY</string>
    <string name="amount_header">AMOUNT</string>
    <string name="RupeeSign">\u20B9 </string>
</resources>


