<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:animateLayoutChanges="true"
    android:background="@drawable/gradient_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        >


        <ProgressBar
            android:id="@+id/pbLoading"
            style="@android:style/Widget.Holo.ProgressBar.Small"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/padding_120"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txvGetOtp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:visibility="visible"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/padding_120"
            android:background="@drawable/get_otp_bg"
            android:elevation="@dimen/padding_5"
            android:gravity="center"
            android:paddingLeft="@dimen/padding_50"
            android:paddingRight="@dimen/padding_50"
            android:text="@string/get_otp"
            android:textColor="@color/white"
            android:textSize="@dimen/app_text_size" />

        <RelativeLayout
            android:id="@+id/rlyMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_20"
            android:layout_marginLeft="@dimen/left_right_margin_for_edittext"
            android:layout_marginRight="@dimen/left_right_margin_for_edittext"
            android:layout_above="@id/txvGetOtp"
            >

            <ImageView
                android:id="@+id/imvMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_5"
                android:src="@drawable/mobile_72"/>


            <EditText
                android:id="@+id/edtMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imvMobile"
                android:gravity="center"
                android:background="@null"
                android:hint="@string/enter_your_mobile_number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/form_textsize" />



            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/bottom_line"
                android:layout_below="@id/imvMobile"
                android:background="@color/white"/>

        </RelativeLayout>


        <ImageView
            android:id="@+id/imvLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/rlyMobile"
            android:layout_marginBottom="@dimen/padding_100"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/iqmojo_logo" />



    </RelativeLayout>
</ScrollView>